pass full entities and use twittter-text-js on frontend
uses twitter-text-js to do clientside replacement to avoid weird
unicode bugs in JS.

reduces complexity of our client code but makes everything more complex
and bloaty, perhaps a bad move?

may require us to do some restyling of CSS.

this is all relevant to issue #13

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .env
 .ruby-version
 .sass-cache
+
+#ignore a bunch of twitter-text crap, including all the pkg old versions
+public/vendor/twitter-text/lib
+public/vendor/twitter-text/test
+public/vendor/twitter-text/pkg/twitter-text-1.[0-6].*
