quick switch to unicorn with heroku default config

--- a/.env-sample
+++ b/.env-sample
@@ -13,6 +13,9 @@ REDIS_URL=redis://localhost:6379
 # where shall we look for the stream server? (no trailing slash)
 STREAM_SERVER=http://localhost:8001
 
+# how many unicorn workers should we run?
+WEB_CONCURRENCY=4
+
 #what port to run on
 PORT=8000
 
